tetrate/TIS0209/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-subset-labels
spec:
  validationFailureAction: Enforce
